updated synchronizer; added stylesheet; created listing of projects and stories

--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,5 +1,7 @@
-%h1 Projects
+.container
+  %h1 Projects
 
-%ul
-  - @projects.each do |project|
-    %li= project.name
+  %ul.simple
+    - @projects.each do |project|
+      %li
+        %a{:href => url_for(project_stories_path(project))}= project.name
