--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,7 +1,1 @@
-.container
-  %h1 Projects
-
-  %ul.simple
-    - @projects.each do |project|
-      %li
-        %a{:href => url_for(project_stories_path(project))}= project.name
+Pick one from the left, honey.
