--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,24 +1,51 @@
-body {
-	font-family: Helvetica;
-	margin-top: 15px;
-}
+/* @group Basic */
 
-h1 {
-	font-size: 25pt;
-	color: #ABC8E2;
-}
+body { font-family: Helvetica; }
 
-a {
-	color: #375D81;
-	text-decoration: none;
-}
+h1 { font-size: 25pt; color: #ABC8E2; }
 
-ul.simple {
-	list-style-type: none;
-	padding: 0px;
-}
+a { color: #375D81; text-decoration: none; }
 
-ul.simple li {
-	margin-bottom: 5px;
-	padding-left: 5px;
-}
+ul.simple { list-style-type: none; padding: 0px; }
+
+ul.simple li { margin-bottom: 5px; padding-left: 5px; }
+
+ul.navigation {  }
+
+ul.navigation li { cursor: pointer; }
+
+ul.navigation li a { color: #2e2e2e; cursor: pointer; }
+
+
+
+/* @end */
+
+/* @group Layout */
+
+.content { padding: 15px; }
+
+#wrapper { background: yellow; position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px; }
+
+#header { height: 49px; background: #eee; border-bottom: 1px solid #d6d6d6; }
+
+#main { position: absolute; top: 50px; bottom: 50px; left: 0px; right: 0px; }
+
+#main #sidebar { background: #f1f4f8; border-right: 1px solid #c5d1de; width: 199px; position: absolute; top: 0px; bottom: 0px; left: 0px; }
+
+#main #document { position: absolute; left: 200px; background: #fff; top: 0px; bottom: 0px; right: 0px; overflow: auto; }
+
+#footer { height: 50px; background: #ececec; border-top: 1px solid #dfdfdf; position: absolute; bottom: 0px; width: 100%; }
+
+
+
+/* @end */
+
+/* @group Typo */
+
+#sidebar h2 { color: #6b809d; font-weight: bold; margin: 0 0 5px; font-size: 11px; text-transform: uppercase; text-shadow: #fff 0 1px 0; }
+
+h1.logo { font: 11pt Monaco; color: #b1b1b1; margin-top: 2px; margin-left: 10px; }
+
+
+
+/* @end */
