--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,17 +12,16 @@
           %h1.logo Headwater
       #main
         #sidebar
-          .content
-            %h2 Main
-            %ul.simple
-              %li Dashboard
-            %h2 Projects
-            %ul.simple.navigation
-              - @projects.each do |project|
-                %li
-                  %a{:href => project_path(project)}= project.name
+          %h2 Main
+          %ul.simple.navigation
+            %li= link_to "Dashboard", projects_path
+          %h2 Projects
+          %ul.simple.navigation
+            - @projects.each do |project|
+              %li{:class => viewing?(project) ? "active" : ""}
+                %a{:href => project_path(project)}= project.name
         #document
           .content
             = yield
       #footer
-        
+        = yield(:footer)
