--- a/app/views/stories/_story.html.haml
+++ b/app/views/stories/_story.html.haml
@@ -1,4 +1,13 @@
-%li
-  = "[%s]" % story.current_state
-  = "[%s]" % story.state
-  = story.name
+%li.clearfix
+  .fl
+    = story.name
+    
+    %a{:href => story.url, :target => "_blank"} T→
+    %br
+    %small== [Progress: ##{story._remote_id}] #{story.name}
+    %br
+    %small== git flow feature start #{story.name.gsub(/[\s-\.]+/, '_').downcase}_#{story._remote_id}
+  .fr
+    - form_for story, :url => project_story_path(@project, story) do |f|
+      = story_state_select(f)
+      = f.submit
