--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8,6 +8,10 @@ h1 { font-size: 25pt; color: #ABC8E2; }
 
 a { color: #375D81; text-decoration: none; }
 
+.fl { float: left; }
+
+.fr { float: right; }
+
 /* @end */
 
 /* @group Layout */
@@ -57,5 +61,13 @@ ul.navigation li.active a { color: #fff; font-weight: bold; text-shadow: #62778f
 #sidebar h2 { color: #6b809d; font-weight: bold; margin: 0 0 5px; font-size: 11px; text-transform: uppercase; text-shadow: #fff 0 1px 0; }
 
 h1.logo { font: 11pt Monaco; color: #b1b1b1; margin-top: 2px; margin-left: 10px; }
+
+/* @end */
+
+/* @group Stories */
+
+small { font-size: 11px; color: #b5b5b5; }
+
+
 
 /* @end */
