[Finished: #4470992] Fellow changes state of a story

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,8 @@
   %head
     %title Headwater β
     = stylesheet_link_tag "blueprint/screen", "application"
+    = javascript_include_tag "jquery.js", "rails.js"
+    = javascript_include_tag "stories.js"
     = csrf_meta_tag
 
   %body
