--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,7 @@
 /* @override 
 	http://localhost:3000/stylesheets/application.css?1
 	http://localhost:3333/stylesheets/application.css?1
+	http://localhost:2010/stylesheets/application.css?1
 */
 
 /* @group Basic */
@@ -71,18 +72,35 @@ h1.logo { font: 11pt Monaco; color: #b1b1b1; margin-top: 2px; margin-left: 10px;
 
 ul.stories { padding: 0px; margin: 0px; }
 
-ul.stories div.state { text-shadow: rgba(0,0,0,0.5) 0 1px 0; -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.3); margin-top: 10px; }
+ul.stories li { margin-bottom: 15px; }
 
-ul.stories li.done div.state { background-image: url(../images/story_state.png); text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; }
+ul.stories div.state { text-transform: uppercase; font-size: 11px; font-weight: bold; padding: 2px 3px 0; padding-right: 1px; }
 
-ul.stories li.current div.state { text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; background: url(../images/story_state.png) 0 -18px; }
+ul.stories li:hover div.state { display: none; }
 
-ul.stories li.upcoming div.state { text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; background: url(../images/story_state.png) 0 -36px; }
+ul.stories li.done div.state { color: #2e9e31; }
+
+ul.stories li.current div.state { color: #468be6; }
+
+ul.stories li.upcoming div.state { color: #e68646; }
+
+ul.stories div.change_state { display: none; text-shadow: rgba(0,0,0,0.3) 0 -1px 0; -webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.3); margin-top: 0px; }
+
+ul.stories div.change_state a { color: #fff; font-size: 11px; padding: 0px; }
+
+ul.stories li:hover div.change_state { display: block; }
+
+ul.stories li.done div.change_state { background-image: url(../images/story_state.png); text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; }
+
+ul.stories li.current div.change_state { text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; background: url(../images/story_state.png) 0 -20px; }
+
+ul.stories li.upcoming div.change_state { text-transform: uppercase; color: #fff; font-size: 11px; font-weight: bold; padding: 2px 3px 0; background: url(../images/story_state.png) 0 -40px; }
 
 ul.stories .icon { padding-right: 10px; padding-top: 3px; }
 
-small { font-size: 11px; color: #b5b5b5; }
+input.message { font-size: 11px; color: #b5b5b5; border-color: #eee; margin: 0px 5px 0px 0px; width: 300px; }
 
+input.message:focus { border-color: #eee; }
 
 
 /* @end */
