--- a/app/views/stories/update.js.erb
+++ b/app/views/stories/update.js.erb
@@ -1,1 +1,4 @@
 $("li.story#story_<%= @story.id %>").replaceWith("<%= escape_javascript(render(:partial => "story", :object => @story)) %>");
+<%- if @story.state == "archived" %>
+  $("li.story#story_<%= @story.id %>").slideUp();
+<%- end %>
