[Progress: #4658303] Fellow displays more information about a story Added inspector for stories

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,8 @@
               %li{:class => viewing?(project) ? "active" : ""}
                 %a{:href => project_path(project)}= project.name
         #document
-          .content
-            = yield
+          = yield
+        #inspector.hidden
+        
       #footer
         = yield(:footer)
