--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -58,6 +58,14 @@ ul.navigation li.active a { color: #fff; font-weight: bold; text-shadow: #62778f
 
 #main #document { position: absolute; left: 200px; background: #fff; top: 0px; bottom: 0px; right: 0px; overflow: auto; }
 
+#main #document.with_inspector { bottom: 250px; }
+
+#main #inspector { background: #f3f3f3; position: absolute; left: 200px; bottom: 0px; right: 0px; height: 250px; border-top: 1px solid #ccc; overflow: auto; }
+
+body.loading #main #inspector { background: #f3f3f3 url(../images/inspector_loader.gif) no-repeat center center; }
+
+body.loading #inspector .content { display: none; }
+
 #footer { height: 50px; background: #ececec; border-top: 1px solid #dfdfdf; position: absolute; bottom: 0px; width: 100%; }
 
 #footer .content { padding-top: 11px; }
@@ -70,13 +78,19 @@ ul.navigation li.active a { color: #fff; font-weight: bold; text-shadow: #62778f
 
 h1.logo { font: 11pt Monaco; color: #b1b1b1; margin-top: 2px; margin-left: 10px; }
 
+h3 { font-weight: bold; font-size: 14px; color: #5178b9; }
+
+p.description { color: #808080; }
+
 /* @end */
 
 /* @group Stories */
 
 ul.stories { padding: 0px; margin: 0px; }
 
-ul.stories li { margin-bottom: 15px; }
+ul.stories li { padding: 10px; margin-bottom: 5px; }
+
+ul.stories li.selected { background-color: #507dbb; color: #fff; }
 
 ul.stories div.state { text-transform: uppercase; font-size: 11px; font-weight: bold; padding: 2px 3px 0; padding-right: 1px; }
 
@@ -105,6 +119,18 @@ ul.stories .icon { padding-right: 10px; padding-top: 3px; }
 input.message { font-size: 11px; color: #b5b5b5; border-color: #eee; margin: 0px 5px 0px 0px; width: 300px; }
 
 input.message:focus { border-color: #eee; color: #636363; }
+
+/* @group Selected */
+
+ul.stories li.selected div.state { color: #fffeff; }
+
+ul.stories li.selected input.message { font-size: 11px; color: #7c9ed0; border: none; margin: 0px 5px 0px 0px; width: 300px; background-color: #4a74af; }
+
+ul.stories li.selected input.message:focus { border-color: #eee; color: #fefcfc; }
+
+
+
+/* @end */
 
 /* @group Filter */
 
