Refactor javascript code for filtering and filter by story type

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,4 +27,6 @@
         #inspector.hidden
         
       #footer
-        = yield(:footer)
+        #footer_side
+        #footer_main
+          = yield(:footer)
