--- a/app/views/stories/_inspector.html.haml
+++ b/app/views/stories/_inspector.html.haml
@@ -5,6 +5,10 @@
   %strong= @story.current_state
   %br
   
+  Updated at:
+  %strong= @story.updated_at
+  %br
+  
   Estimate:
   %strong= @story.estimate
   
