--- a/app/views/stories/_inspector.html.haml
+++ b/app/views/stories/_inspector.html.haml
@@ -1,15 +1,20 @@
 .content
-  %h3= @story.name
+  - form_for [@project, @story] do |f|
+    %h3= @story.name
   
-  State:
-  %strong= @story.current_state
-  %br
+    State:
+    %strong
+      = f.select :current_state, Story::STATES
+    %br
   
-  Updated at:
-  %strong= @story.updated_at
-  %br
+    Updated at:
+    %strong= @story.updated_at
+    %br
   
-  Estimate:
-  %strong= @story.estimate
+    Estimate:
+    %strong
+      = f.text_field :estimate
   
-  %p.description= @story.description
+    %p.description= @story.description
+    
+    = f.submit
