--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -20,6 +20,8 @@ a { color: #375D81; text-decoration: none; }
 
 .hidden { display: none; }
 
+ul.simple { list-style-type: none; padding: 0px; margin: 0px; }
+
 /* @end */
 
 /* @group Layout */
