Added time tracking + minor issues

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,8 @@
     #wrapper
       #header
         .content
-          %h1.logo Headwater
+          = link_to "Projects", projects_path
+          = link_to "Time tracking", time_entries_path
       #main
         #sidebar
           %h2 Main
