--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,3 +31,6 @@
         #footer_main
           = yield(:footer)
         #footer_side
+        
+    #time_tracker{:"data-path" => current_time_entries_path}
+      This is a time tracker!
