[Progress: #4745076] Tracker time is synchronized with Harvest [Progress: #4777649] Add formtastic to all forms

--- a/app/views/time_entries/index.html.haml
+++ b/app/views/time_entries/index.html.haml
@@ -4,6 +4,7 @@
   %table
     %tr
       %th Date
+      %th User
       %th Story
       %th Length
       %th
@@ -11,6 +12,7 @@
     - @entries.each do |entry|
       %tr
         %td= entry.date
+        %td= entry.user
         %td= entry.story.name
         %td= entry.total_length
         %td= link_to "Remove", remove_time_entry_path(entry), :class => "ajax"
