--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
             You are logged in:
             = current_user.email
             = link_to "Log out", destroy_user_session_path
+            = link_to "My Account", edit_registration_path(current_user)
       #main
         #sidebar
           %h2 Main
