--- a/app/views/stories/_form.html.haml
+++ b/app/views/stories/_form.html.haml
@@ -1,17 +1,9 @@
-- form_for [@project, @story] do |f|
-  = f.label :name
-  = f.text_field :name
-  %br
-  = f.label :story_type
-  = f.select :story_type, Story::TYPES
-  %br
-  = f.label :current_state
-  = f.select :current_state, Story::STATES
-  %br
-  = f.label :description
-  = f.text_area :description
-  %br
-  = f.label :estimate
-  = f.text_field :estimate
-  %br
-  = f.submit
+- semantic_form_for [@project, @story] do |f|
+  - f.inputs do
+    = f.input :name
+    = f.input :story_type, :as => :select, :collection => Story::TYPES
+    = f.input :current_state, :as => :select, :collection => Story::STATES
+    = f.input :description, :as => :text
+    = f.input :estimate
+
+  = f.buttons
